# httpkit

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
httpkit/: __init__.py  proxy.py  reverse_shell.py
httpkit/tools/: __init__.py  proxy.py  reverse_shell.py
tests/: __init__.py  integration_test_proxy.py  manual_test_proxy.py  test_optimized_proxy.py  test_proxy.py  test_reverse_shell.py
